--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@axe-core/playwright": "=4.4.4",
+        "@capacitor/assets": "^3.0.5",
         "@capacitor/cli": "7.2.0",
         "@jcesarmobile/ssl-skip": "^0.4.0",
         "@playwright/test": "=1.51.0",
