--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
         "cljs:mobile-watch": "clojure -M:cljs watch mobile",
         "cljs:release-mobile": "clojure -M:cljs release mobile",
         "cljs:dev-watch": "clojure -M:cljs watch app electron mobile",
-        "cljs:app-watch": "clojure -M:cljs watch app",
+        "cljs:app-watch": "clojure -M:cljs watch app workers",
         "cljs:electron-watch": "clojure -M:cljs watch app electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
         "cljs:release": "clojure -M:cljs release app publishing electron",
         "cljs:release-electron": "clojure -M:cljs release app electron --debug && clojure -M:cljs release publishing",
