--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
         "@capacitor/share": "7.0.1",
         "@capacitor/splash-screen": "7.0.1",
         "@capacitor/status-bar": "7.0.1",
+        "@capacitor-community/safe-area": "7.0.0-alpha.1",
         "@capawesome/capacitor-background-task": "7.0.1",
         "@capgo/capacitor-navigation-bar": "7.1.2",
         "@dnd-kit/core": "^6.0.8",
@@ -121,8 +122,6 @@
         "@excalidraw/excalidraw": "0.16.1",
         "@glidejs/glide": "^3.6.0",
         "@highlightjs/cdn-assets": "10.4.1",
-        "@ionic/core": "^8.5.4",
-        "@ionic/react": "^8.5.4",
         "@isomorphic-git/lightning-fs": "^4.6.0",
         "@js-joda/core": "3.2.0",
         "@js-joda/locale_en-us": "3.1.1",
