--- a/package.json
+++ b/package.json
@@ -50,17 +50,18 @@
     },
     "scripts": {
         "watch": "run-p gulp:watch cljs:watch",
-        "electron-watch": "run-p gulp:watch cljs:electron-watch",
-        "app-watch": "run-p gulp:watch cljs:app-watch",
-        "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch",
-        "release": "run-s gulp:build cljs:release",
-        "release-app": "run-s gulp:build cljs:release-app",
+        "electron-watch": "run-p gulp:watch cljs:electron-watch webpack",
+        "app-watch": "run-p gulp:watch cljs:app-watch webpack",
+        "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch webpack",
+        "release": "run-s gulp:build cljs:release webpack-build",
+        "release-app": "run-s gulp:build cljs:release-app webpack-build",
         "release-mobile": "run-s gulp:buildMobile cljs:release-mobile",
         "dev-release-app": "run-s gulp:build cljs:dev-release-app",
         "dev-electron-app": "gulp electron",
         "release-electron": "run-s gulp:build && gulp electronMaker",
         "debug-electron": "cd static/ && yarn electron:debug",
         "webpack": "webpack --watch",
+        "webpack-build": "npx webpack build",
         "sync-android-release": "yarn clean && yarn release-mobile && rm -rf ./static/mobile/**/*.map && npx cap sync android",
         "sync-ios-release": "yarn clean && yarn release-mobile && rm -rf ./static/mobile/**/*.map && npx cap sync ios",
         "clean": "gulp clean",
@@ -72,27 +73,27 @@
         "gulp:buildMobile": "cross-env NODE_ENV=production gulp buildMobile",
         "css:build": "postcss tailwind.all.css -o static/css/style.css --verbose --env production",
         "css:watch": "cross-env TAILWIND_MODE=watch postcss tailwind.all.css -o static/css/style.css --verbose --watch",
-        "cljs:watch": "clojure -M:cljs watch app electron",
+        "cljs:watch": "clojure -M:cljs watch app workers electron",
         "cljs:storybook-watch": "clojure -M:cljs watch stories-dev",
         "gulp:mobile-watch": "gulp watchMobile",
         "css:mobile-build": "postcss tailwind.mobile.css -o static/mobile/style.css --verbose --env production",
         "css:mobile-watch": "cross-env TAILWIND_MODE=watch postcss tailwind.mobile.css -o static/mobile/style.css --verbose --watch",
         "cljs:mobile-watch": "clojure -M:cljs watch mobile",
         "cljs:release-mobile": "clojure -M:cljs release mobile",
-        "cljs:dev-watch": "clojure -M:cljs watch app electron mobile",
+        "cljs:dev-watch": "clojure -M:cljs watch app workers electron mobile",
         "cljs:app-watch": "clojure -M:cljs watch app workers",
-        "cljs:electron-watch": "clojure -M:cljs watch app electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
-        "cljs:release": "clojure -M:cljs release app publishing electron",
-        "cljs:release-electron": "clojure -M:cljs release app electron --debug && clojure -M:cljs release publishing",
-        "cljs:release-app": "clojure -M:cljs release app",
-        "cljs:release-publishing": "clojure -M:cljs release publishing",
+        "cljs:electron-watch": "clojure -M:cljs watch app workers electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
+        "cljs:release": "clojure -M:cljs release app workers publishing electron",
+        "cljs:release-electron": "clojure -M:cljs release app workers electron --debug && clojure -M:cljs release publishing",
+        "cljs:release-app": "clojure -M:cljs release app workers",
+        "cljs:release-publishing": "clojure -M:cljs release app publishing",
         "cljs:test": "clojure -M:test compile test",
         "cljs:run-test": "node static/tests.js",
-        "cljs:dev-release-app": "clojure -M:cljs release app --config-merge \"{:closure-defines {frontend.config/DEV-RELEASE true}}\"",
-        "cljs:dev-release-electron": "clojure -M:cljs release app electron --debug --config-merge \"{:closure-defines {frontend.config/DEV-RELEASE true}}\" && clojure -M:cljs release publishing",
-        "cljs:debug": "clojure -M:cljs release app --debug",
-        "cljs:report": "clojure -M:cljs run shadow.cljs.build-report app report.html",
-        "cljs:build-electron": "clojure -A:cljs compile app electron",
+        "cljs:dev-release-app": "clojure -M:cljs release app workers --config-merge \"{:closure-defines {frontend.config/DEV-RELEASE true}}\"",
+        "cljs:dev-release-electron": "clojure -M:cljs release app workers electron --debug --config-merge \"{:closure-defines {frontend.config/DEV-RELEASE true}}\" && clojure -M:cljs release publishing",
+        "cljs:debug": "clojure -M:cljs release app workers --debug",
+        "cljs:report": "clojure -M:cljs run shadow.cljs.build-report app workers report.html",
+        "cljs:build-electron": "clojure -A:cljs compile app workers electron",
         "cljs:lint": "clojure -M:clj-kondo --parallel --lint src --cache false",
         "ios:dev": "cross-env PLATFORM=ios gulp cap",
         "android:dev": "cross-env PLATFORM=android gulp cap",
