fix: gh workflows missing deps
This result in bugs as deps changes could break downstream dependents
since their workflows aren't run. outliner was missing graph-parser and
all deps were missing common

--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -8,12 +8,16 @@ on:
       - 'deps/db/**'
       - '.github/workflows/db.yml'
       - '!deps/db/**.md'
+      # Deps that logseq/db depends on should trigger this workflow
+      - 'deps/common/**'
   pull_request:
     branches: [master]
     paths:
       - 'deps/db/**'
       - '.github/workflows/db.yml'
       - '!deps/db/**.md'
+      # Deps that logseq/db depends on should trigger this workflow
+      - 'deps/common/**'
 
 defaults:
   run:
