--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
         "dev": "run-p gulp:watch gulp:mobile-watch cljs:dev-watch webpack",
         "release": "run-s gulp:build cljs:release webpack-build",
         "release-app": "run-s gulp:build cljs:release-app webpack-build",
-        "release-mobile": "run-s gulp:buildMobile cljs:release-mobile",
-        "dev-release-app": "run-s gulp:build cljs:dev-release-app",
+        "release-mobile": "run-s gulp:buildMobile cljs:release-mobile webpack-build",
+        "dev-release-app": "run-s gulp:build cljs:dev-release-app webpack-build",
         "dev-electron-app": "gulp electron",
-        "release-electron": "run-s gulp:build && gulp electronMaker",
+        "release-electron": "run-s gulp:build && gulp electronMaker webpack-build",
         "debug-electron": "cd static/ && yarn electron:debug",
         "webpack": "webpack --watch",
         "webpack-build": "npx webpack build",
