--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
         "gulp:mobile-watch": "gulp watchMobile",
         "css:mobile-build": "postcss tailwind.mobile.css -o static/mobile/style.css --verbose --env production",
         "css:mobile-watch": "cross-env TAILWIND_MODE=watch postcss tailwind.mobile.css -o static/mobile/style.css --verbose --watch",
-        "cljs:mobile-watch": "clojure -M:cljs watch mobile",
-        "cljs:release-mobile": "clojure -M:cljs release mobile",
+        "cljs:mobile-watch": "clojure -M:cljs watch mobile workers",
+        "cljs:release-mobile": "clojure -M:cljs release mobile workers",
         "cljs:dev-watch": "clojure -M:cljs watch app workers electron mobile",
         "cljs:app-watch": "clojure -M:cljs watch app workers",
         "cljs:electron-watch": "clojure -M:cljs watch app workers electron --config-merge \"{:asset-path \\\"./js\\\"}\"",
