--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,6 +71,7 @@
     "@types/prop-types": "^15",
     "@types/react": "17",
     "@types/react-dom": "17",
+    "buffer": "^5.5.0",
     "parcel": "2.8.3",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
