--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
         "tldraw:build": "yarn --cwd packages/tldraw install",
         "amplify:build": "yarn --cwd packages/amplify install",
         "ui:build": "yarn --cwd packages/ui install",
-        "postinstall": "yarn tldraw:build && yarn amplify:build && yarn ui:build"
+        "postinstall": "yarn tldraw:build && yarn ui:build"
     },
     "dependencies": {
         "@capacitor-community/safe-area": "7.0.0-alpha.1",
