enhance: prevent deploy when e2e failed

--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -92,3 +92,11 @@ jobs:
           name: e2e-screenshots
           path: clj-e2e/e2e-dump/*
           retention-days: 1
+
+      - name: Mark success
+        if: ${{ success() }}
+        run: echo "E2E OK" > e2e-success.txt
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-success
+          path: e2e-success.txt
