--- a/.github/workflows/clj-e2e.yml
+++ b/.github/workflows/clj-e2e.yml
@@ -96,6 +96,8 @@ jobs:
       - name: Mark success
         if: ${{ success() }}
         run: echo "E2E OK" > e2e-success.txt
+
+      - name: Upload success artifact
         uses: actions/upload-artifact@v4
         with:
           name: e2e-success
