--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
         "sanitize-filename": "1.6.3",
         "send-intent": "^7.0.0",
         "shepherd.js": "^9.1.0",
+        "stay-liquid": "https://github.com/logseq/stay-liquid.git#d63b76938ea036ec028b2b9fde22b2f206a9dde7",
         "tailwind-capitalize-first-letter": "^1.0.4",
         "threads": "1.6.5",
         "url": "^0.11.0",
